--- a/Sm4shGames/SupportFiles/Base.lproj/Main.storyboard
+++ b/Sm4shGames/SupportFiles/Base.lproj/Main.storyboard
@@ -171,6 +171,11 @@ is worth gaming</string>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kev-hK-Lnd" customClass="CosmosView" customModule="Cosmos">
+                                <rect key="frame" x="23" y="157" width="122" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="5La-bS-Gqh"/>
@@ -181,6 +186,7 @@ is worth gaming</string>
                         <outlet property="gameImageIV" destination="EPk-Sn-z8Y" id="QK6-U6-YlD"/>
                         <outlet property="gamePriceBtn" destination="pGc-5o-qXm" id="LSH-PE-7rH"/>
                         <outlet property="gameTitleLbl" destination="D7F-81-ZHG" id="g9H-vo-P9w"/>
+                        <outlet property="ratingController" destination="Kev-hK-Lnd" id="wJE-Cj-0cB"/>
                         <outlet property="skuNumberLbl" destination="8q6-Vu-AmN" id="aLL-oc-FbI"/>
                     </connections>
                 </viewController>
@@ -313,6 +319,7 @@ updates </string>
                     </view>
                     <connections>
                         <outlet property="rangeSeeker" destination="aSN-J7-UOx" id="aCp-k7-Ibs"/>
+                        <outlet property="ratingControl" destination="vUV-i2-GN6" id="T8r-df-Q5C"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IyY-Wi-l7W" userLabel="First Responder" sceneMemberID="firstResponder"/>
